fix: change the navbar height to bridge the gap

--- a/assets/css/markdown.css
+++ b/assets/css/markdown.css
@@ -95,6 +95,6 @@
 }
 
 .content *:target {
-  padding-top: 4.5rem;
-  margin-top: -4.5rem;
+  padding-top: 4rem;
+  margin-top: -4rem;
 }
